Fixed Scrollbar Issue on Contact Page
Overflow in the y direction on the contact page has been fixed so that
it will scroll properly

--- a/www/src/main.css
+++ b/www/src/main.css
@@ -418,3 +418,8 @@ img::-moz-selection {
 body {
   webkit-tap-highlight-color: #222222;
 }
+
+.test {
+  background-color: blue;
+  overflow-y: scroll;
+}
